# babymonitor-client

./: .gitignore  CLAUDE.md  Justfile  NOTICES.txt  README.md  TESTING.md  shell.nix
babymonitor/: Cargo.toml  README.md
babymonitor/babymonitor-cli/: Cargo.toml
babymonitor/babymonitor-cli/src/: gui.rs  live.rs  main.rs  stream.rs  stream_live.rs
babymonitor/babymonitor-cli/src/live/: firmware.rs
babymonitor/babymonitor-cli/tests/: live_e2e.rs
babymonitor/babymonitor-core/: Cargo.toml
babymonitor/babymonitor-core/src/: device.rs  lib.rs  session.rs  sign.rs
babymonitor/babymonitor-core/src/stream/: connect.rs  frame.rs  lan_config.rs  lan_discovery.rs  lan_transport.rs  mod.rs  mqtt_auth.rs  mqtt_crypto.rs  rtc_config.rs  sdp.rs  session.rs  signaling.rs  topics.rs  transport.rs  tuya_lan.rs
babymonitor/babymonitor-core/src/stream/media/: audio.rs  control.rs  crypto.rs  frame.rs  g711.rs  h264.rs  kcp.rs  mod.rs  rtp.rs  stun.rs  transport.rs
babymonitor/babymonitor-core/tests/: cap4_replay.rs  cap4_stun_kat.rs  device_fixtures.rs  mqtt_frame_cap5.rs  rtc_config_cap.rs  signaling_cap3.rs  trickle_candidates_cap.rs
babymonitor/babymonitor-core/tests/fixtures/: camera_info.json  device_list.json  rtc_config_redacted.json  signaling_cap3_redacted.jsonl
backlog/: config.yml
backlog/tasks/: task-0001 - Decompile-all-DEX-with-jadx-into-searchable-Java.md  task-0002 - Decode-manifest-permissions-and-app-components-apktool.md  task-0003 - Extract-and-deobfuscate-the-React-Native-V8-JS-bundle.md  task-0004 - Catalog-native-libs-and-pin-Tuya-SDK-identity-versions.md  task-0005 - Recover-Tuya-AppKey-AppSecret-cloud-domains-and-region.md  task-0006 - REVIEW-honestyarchitecture-audit-of-Wave-1-analysis-docs.md  task-0007 - Map-Tuya-cloud-auth-device-binding-API.md  task-0008 - Map-device-pairing-WiFi-provisioning-SmartLink-AP-QR.md  task-0009 - Triage-libThingP2PSDK-Camera-codec-native-libs.md  task-0010 - SPIKE-libThingP2PSDK-session-AV-framing-feasibility.md  task-0011 - Scaffold-Rust-workspace-Justfile-and-grounding-gates.md  task-0012 - Implement-Tuya-cloud-auth-request-signing-in-Rust.md  task-0013 - Implement-device-list-binding-models-service-in-Rust.md  task-0014 - End-to-end-acceptance-harness-gated-live-logindevice-list.md  task-0015 - REVIEW-GATE-Wave-1-code-analysis-mped-architect-qa-test-runner.md  task-0016 - RE-PLAN-plan-Wave-2-from-Wave-1-knowledge-not-feature-code.md  task-0017 - TRIAGE-WebRTC-over-MQTT-vs-P2P-streaming-mode-decision.md  task-0018 - Bring-re-milestone2_findings.md-and-review_gate_findings.md-into-check-evidence-canonical-vocabulary.md  task-0019 - Harden-grounding-gates-check-evidence-≥2-source-confirmed-real-verdict-label-redaction.md  task-0020 - Gate-polish-redaction-offset-safety-same-artifact-citation-independence.md  task-0021 - check-evidence-validates-citation-SHAPE-not-CONTENT-false-attribution-passes.md  task-0022 - Frida-hook-to-capture-Tuya-sign-vector-derived-key-at-runtime.md  task-0023 - Ghidra-disassembly-of-libthing_security-cmd1-sign-SignFileDecoder-for-fully-static-sign.md  task-0023 - radare2-disassembly-of-libthing_security-cmd1-sign-SignFileDecoder-for-fully-static-sign.md  task-0024 - Re-anchor-re-.md-citations-to-symbol-names-line-numbers-drift-across-jadx-runs.md  task-0025 - FIX-js_bundle_map.md-PlayNetKit-ICE-73-hits-contradicts-streaming_mode-WebRTC-verdict.md  task-0026 - FIX-milestone2_findings.md-streaming-framing-stale-vs-TASK-0017-WebRTC-verdict.md  task-0027 - FIX-milestone2_findings.md-sign-key-staleness-appSecret-alone-is-NOT-sufficient-to-sign-Tuya-requests.md  task-0028 - Citation-precision-nits-in-js_bundle_map.md-WebRTC-correction-block.md  task-0029 - Port-the-t_s.bmp-matrix-imath-token-decode-to-Rust-static-signer-residual.md  task-0030 - Port-the-t_s.bmp-white-box-table-cipher-fcn.11658-OR-capture-a-live-sign-vector.md  task-0031 - Harden-cert-SHA256-validation-file-body-digest-ambiguity-into-spec.md  task-0032 - Implement-the-t_s.bmp-bmp_token-via-the-imath-bignum-matrix-decode-fcn.13b5c-path-OR-pin-it-with-ONE-live-sign.md  task-0032 - Pin-the-request-signer-bmp_token-mapping-via-ONE-live-sign-accept.md  task-0033 - Ghidra-headless-port-of-the-bmp_token-imathmatrix-decode-byte-exact-2nd-tool-corroboration.md  task-0034 - Wave-2-WebRTC-over-MQTT-signaling-client-live-A-V-stream-webrtc-rs-rumqttc.md  task-0035 - Wave-2-DECISION-unblock-auth-—-runtime-SDK-config-byte-OR-one-live-sign-vector-relaxes-static-only.md  task-0036 - Wave-2-DEEP-RE-PLAN-run-phase2-backlog-snowball-for-Wave-2-in-a-fresh-session.md  task-0037 - Media-transportdecrypt-engine-cap3-PATH-A-ICE-KCP-AES-128-CBC-HMAC-RTP-depacketize.md  task-0037 - Wave-2-webrtc-rs-media-engine-wiring-302-payload-localKey-AES-mode-MQTT-TLS-live-stream-completion.md  (+93 more)
re/: aes_tables.txt  bmp_token_decode.md  bmp_token_provenance.md  bmp_token_whitebox.md  camera_image_settings.md  camera_network_surface.md  cap5_publish_capture.md  chkey_static.md  cloud_storage_signature.md  cry_detection.md  cry_translation.md  decompile_dex.md  device_settings_dps.md  environment_sensors.md  family_sharing.md  firmware_ota.md  gui_window.md  identity_enumeration.md  js_bundle_map.md  live_login.md  live_stream_run.md  manifest_analysis.md  master_secret_g.md  media_capture_plan.md  media_decode_spec.md  media_start_handshake.md  message_center.md  milestone2_findings.md  motion_detection.md  mqtt_2_2_frame.md  mqtt_signaling.md  native_libs.md  notifications.md  p2p_triage.md  pairing_flow.md  pii_inventory.md  playback_protocol.md  prd.md  ptz_control.md  ptz_presets_cruise.md  (+15 more)
re/ghidra/: ThingSmartP2PSDK_Initialize.c  ThingSmartP2PSDK_SendMessageThroughMQTT.c  build_mpint_op1.c  build_mpint_op2.c  computeDigest.c  decode_op1.c  decode_op2.c  dispatch_decode.c  doCommandNative.c  emit_candidate_signal.c  encryptPostData.c  getEncryptoKey.c  header_check.c  ice_gather_complete.c  ice_gather_from_tokens.c  imm_p2p_h264_packetize.c  imm_p2p_rtc_connect_v2.c  imm_p2p_rtc_connect_v3.c  imm_p2p_rtc_frame_list_get_current_frame.c  imm_p2p_rtc_get_session_info.c  (+47 more)
(+40 files in other folders)
