[workspace]
resolver = "2"
members = ["babymonitor-core", "babymonitor-cli"]

# Shared dependency versions live here so the two crates stay in lockstep.
# Kept intentionally minimal; real deps (reqwest, tokio, aes, ...) are added by
# the tasks that need them (see TASK-0007/0012/0013).
[workspace.dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# Signing + token store (TASK-0012). MD5 is the recovered keyed-hash primitive
# (re/tuya_sign_static.md §3 — plain MD5, NOT HMAC-SHA256); sha2 is for the
# offline app-cert hash; base64/hex for the canonical-string encodings; dirs for
# the XDG data dir; serde/serde_json/chrono for the session token store.
md5 = "0.7"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# Inflate the (DEFLATE-compressed) APK signature block for the offline cert
# hash. Pure-Rust miniz_oxide backend (no system zlib) keeps the e2e gate
# self-contained and offline.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# MQTT signaling transport for the Tuya WebRTC-over-MQTT 302 channel (TASK-0034).
# We use rumqttc's SYNCHRONOUS `Client`/`Connection` (no async runtime spun by
# us) behind the `stream::session::MqttTransport` seam. default-features OFF on
# purpose: it drops the TLS stack (rustls/ring) — a large, network/C-build-heavy
# tree that would jeopardise the `just assert-offline` gate. The live Tuya broker
# IS TLS, so the `use-rustls` feature must be re-enabled on the live path; that is
# a live-only follow-up (TASK-0035), gated like the rest of the live stream.
# webrtc-rs is deliberately NOT added — see babymonitor-core/src/stream/mod.rs.
rumqttc = { version = "0.24", default-features = false }

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.74"
