[package]
name = "babymonitor-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI viewer for the Philips Avent Baby Monitor+ (white-labeled Tuya IPC camera). Scaffold only."

[[bin]]
name = "babymonitor-cli"
path = "src/main.rs"

[dependencies]
babymonitor-core = { path = "../babymonitor-core" }
clap.workspace = true
