[package]
name = "babymonitor-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI viewer for the Philips Avent Baby Monitor+ (white-labeled Tuya IPC camera)."

[[bin]]
name = "babymonitor-cli"
path = "src/main.rs"

[features]
# `live` gates the AUTHORIZED one-time live Tuya login path (TASK-0042) behind an
# opt-in compile flag. It pulls reqwest (blocking + rustls TLS) and rsa, which are
# NETWORK/TLS-heavy trees deliberately kept OUT of the default build so
# `just e2e` / `just assert-offline` never compile or link them — the offline gate
# stays green. Build the live path explicitly with `--features live`.
#
# It ALSO forward-enables `babymonitor-core/live-tls` (TASK-0074): without this the
# TLS:8883 broker CONNECT line in core's stream::transport
# (`opts.set_transport(rumqttc::Transport::tls_with_default_config())`, under
# `#[cfg(feature = "live-tls")]`) is NEVER compiled by `cargo build --features live`,
# so the live MQTT signaling path would silently fall back to plain TCP. The core
# `live-tls` feature pulls rumqttc's `use-rustls` (rustls+ring), another TLS-heavy
# tree kept out of the offline/default build for the same reason as above.
live = [
    "dep:reqwest",
    "dep:rsa",
    "dep:rand",
    "dep:chrono",
    "dep:hex",
    "dep:aes-gcm",
    "dep:base64",
    "babymonitor-core/live-tls",
]

# `gui` gates the in-app SDL2 video window (TASK-0115) — an alternative to the
# ffmpeg/HTTP `stream` output: it renders the decoded feed in OUR OWN window (no
# external player, no HTTP). Decode is IN-PROCESS via the ffmpeg-the-third
# libavcodec binding (NOT a subprocess, NOT an MPEG-TS/HTTP hop): YUV420 frames go
# straight into an SDL2 IYUV texture (decision recorded in re/gui_window.md). The
# SDL2 + libav + X11 deps are kept OUT of the default/offline build so `just e2e`
# stays lean+green.
gui = ["dep:sdl2", "dep:ffmpeg-the-third"]

[dependencies]
babymonitor-core = { path = "../babymonitor-core" }
clap.workspace = true
serde_json.workspace = true
serde.workspace = true

# ── live-only (feature `live`) — see [features] above ────────────────────────
# reqwest BLOCKING (no async runtime we manage) + rustls TLS (the live Tuya atop
# gateway is HTTPS). default-features off to drop the default-TLS (native-tls/
# openssl) path and select rustls explicitly.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
# RSA PKCS#1 v1.5 encryption of the password with the token.get pubkey (the
# `ifencrypt=1` path, re/tuya_cloud_auth.md §2).
rsa = { version = "0.9", optional = true }
rand = { version = "0.8", optional = true }
chrono = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# ── gui-only (feature `gui`) — the in-app render window (TASK-0115) ───────────
# Links the system SDL2 (provided by shell.nix) via pkg-config; no bundled build.
sdl2 = { version = "0.37", default-features = false, features = ["use-pkgconfig"], optional = true }
# In-process H.264 DECODER (libavcodec binding — links ffmpeg's libs, no subprocess
# and no MPEG-TS/HTTP hop). Generates bindings from the system ffmpeg headers via
# bindgen (needs LIBCLANG_PATH from shell.nix). codec = decode, software-scaling =
# YUV->RGB (swscale).
ffmpeg-the-third = { version = "3", default-features = false, features = ["codec", "format", "software-scaling"], optional = true }
