[package]
name = "babymonitor-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for a Rust client to the Philips Avent Baby Monitor+ (white-labeled Tuya IPC camera). Scaffold only."

[dependencies]
thiserror.workspace = true
md5.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
flate2.workspace = true
