[package]
name = "babymonitor-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for a Rust client to the Philips Avent Baby Monitor+ (white-labeled Tuya IPC camera). Scaffold only."

[features]
# Live-only TLS for the Tuya MQTT broker (port 8883). OFF by default so the
# default build / `just e2e` / `just assert-offline` never pull rustls+ring and
# the offline gate stays green. Enable on the live path: `--features live-tls`.
# Wires rumqttc's rustls transport in stream::transport (the CONNECT creds are
# still injected — and the broker password is native-derived, see
# re/mqtt_signaling.md).
live-tls = ["rumqttc/use-rustls"]

[dependencies]
thiserror.workspace = true
md5.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
flate2.workspace = true
rumqttc.workspace = true
aes.workspace = true
# Media-plane (PATH A) decrypt engine (TASK-0037): AES-128-CBC per KCP segment
# (suite 3), datagram HMAC-SHA1 integrity (suite 3, cap4-pinned 20B trailer), and
# AES-128-GCM (suite 4, [G]). All resolve from the offline cargo cache so the
# `just assert-offline` gate stays green (see workspace Cargo.toml notes).
cbc.workspace = true
hmac.workspace = true
sha1.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true
rustix.workspace = true
# Secure config reads require the platform's real O_NOFOLLOW value; handwritten
# raw constants differ by Unix ABI/architecture.
libc = "=0.2.186"
